// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiToken is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--tokenTint10 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint01 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--tokenTint01 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint02 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--tokenTint02 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint03 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--tokenTint03 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint04 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--tokenTint04 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint05 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--tokenTint05 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint06 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--tokenTint06 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint07 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--tokenTint07 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint08 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--tokenTint08 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint09 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--tokenTint09 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint10 is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--tokenTint10 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props fill dark is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--tokenTint10 euiToken--dark euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props fill light is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--tokenTint10 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props fill none is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--tokenTint10 euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props shape circle is rendered 1`] = `
<div
  class="euiToken euiToken--circle euiToken--tokenTint01 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props shape rectangle is rendered 1`] = `
<div
  class="euiToken euiToken--rectangle euiToken--tokenTint01 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props shape square is rendered 1`] = `
<div
  class="euiToken euiToken--square euiToken--tokenTint01 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props size l is rendered 1`] = `
<div
  class="euiToken euiToken--circle euiToken--tokenTint01 euiToken--light euiToken--large"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--large euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props size m is rendered 1`] = `
<div
  class="euiToken euiToken--circle euiToken--tokenTint01 euiToken--light euiToken--medium"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props size s is rendered 1`] = `
<div
  class="euiToken euiToken--circle euiToken--tokenTint01 euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props size xs is rendered 1`] = `
<div
  class="euiToken euiToken--circle euiToken--tokenTint01 euiToken--light euiToken--xsmall"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;
